# thery.ai

./: .env.example  .gitignore  Dockerfile  README.md  dump.rdb  entrypoint.sh  pyproject.toml  requirements.txt
notebooks/: chroma_db_test.ipynb  rag_test.ipynb
src/: api.py  conv_bot.py  crud.py  db_create.py  emotion_detection.py  history.py  main.py  pdf_splitter.py  vector_db.py
src/api/router/: routes.py
src/auth/: security.py
src/core/: config.py
src/llm/: conv_bot.py  core.py  emotion_detection.py  main.py  routes.py
src/llm/agents/: base_agent.py  context_agent.py  conversation_agent.py  emotion_agent.py
src/llm/core/: config.py  llm.py
src/llm/memory/: history.py  memory_manager.py  pg_connection.py  redis_connection.py  session_manager.py  vector_store.py
src/llm/models/: data_models.py  schemas.py
src/llm/utils/: database.py  logging.py
src/memory/: history.py  redis_connection.py  vector_store.py
src/models/: models.py  schemas.py
src/music/: fetch.py  main.py
src/music/clients/: spotify_client.py
src/music/config/: settings.py
src/music/models/: data_models.py
src/music/services/: genre_service.py
src/services/llm/: llm.py
src/services/llm/agents/: context_agent.py  conversation_agent.py  emotion_agent.py
src/spot_music/: fetch.py  sp_recm.py
src/tele_bot/: bot.py  graph.md
src/utils/: pdf_splitter.py  vector_db.py
