[tool.poetry]
name = "thetherapist"
version = "0.1.0"
description = "Using RAG technique to build an LLM model to serve as a therapist for mentally challenged people"
authors = ["Testimony Adekoya <hardeykoryar7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.2"
langchain-core = ">=0.2"
langchain-community = ">=0.2"
langchain-text-splitters = ">=0.2"
langchain-google-genai = ">=1.0"
langchain-google-community = ">=1.0"
langchain-huggingface = ">=0.0.3"
langchain-tavily = ">=0.1"
tavily-python = ">=0.3"
faiss-cpu = ">=1.7"
sentence-transformers = ">=3.0"
torch = ">=2.0"
transformers = ">=4.40"
fastapi = ">=0.112"
uvicorn = {extras = ["standard"], version = ">=0.30"}
redis = ">=5.0"
psycopg2-binary = ">=2.9"
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
python-dotenv = ">=1.0"
python-telegram-bot = ">=21.0"
langsmith = ">=0.1"
schedule = ">=1.2"
spotipy = ">=2.23"
numpy = ">=1.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
